required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to
the top of the list.)

For a complete change history, please see the Git log comments.

7.2 release (FUTURE)
--------------------

- Implement chainable compositing filters (RFC113)

7.0.0 release (2015/07/24)
--------------------------

- No major changes, see detailed changelog for bug fixes

7.0.0-beta2 release (2015/06/29)
--------------------------------

- No major changes, see detailed changelog for bug fixes

7.0.0-beta1 release (2015/02/12)
--------------------------------

- RFC91 Layer Filter Normalization

- Implement WCS20 Extensions (#4898)

- Require validation of ExternalGraphic OnlineResource (#4883)

- Require validation on the CGI queryfile parameter. (#4874)

- Apply RFC86 scaletoken substitutions to layer->PROCESSING entries

- RFC113 Layer Compositing Pipeline

- RFC109 Optimizing Runtime Substitutions

- RFC108 Heatmap / Kernel-Density Layers

- RFC106 Support of Geomtransform JavaScript Plugin

- RFC105 Support for WFS 2.0 (server side)

- RFC104 Bitmap Label removal, replaced with inlined truetype font

- RFC103 Layer Level Character Encoding

- RFC102 Support of Styleitem JavaScript Plugin

- RFC99 GD removal

- RFC98 Complex Text Rendering / Text Rendering Overhaul

- RFC93 UTF Grid Support

6.4 release (2013/09/17)
---------------------------

- RFC 101: Support for Content Dependant Legend Rendering

- Add Support for librsvg as an alternative to libsvg-cairo

- RFC100: Add support for raster tile index with tiles of mixed SRS (TILESRS keyword)

- RFC94: Shape Smoothing

- RFC95 : add EXPRESSION {value1,value2,...} support to parser (#4648)

- RFC92: Migration from autotools to cmake (#4617)

- RFC88: Saving MapServer Objects to Strings (#4563)

- RFC90: Enable/Disable Layers in OGC Web Services by IP Lists
